# ngs

./: Cargo.toml  README.md  test_client.py
.github/: pull_request_template.md
.github/workflows/: rust.yml
blueprints/: client_server_high_level.mmd  connection_finding.mmd  idea.lorien
src/: lib.rs  main.rs
src/cli/: mod.rs
src/connection/: game_join.rs  handshake.rs  mod.rs  peer.rs  shared.rs
src/room/: mod.rs
