[package]
name = "ngs"
description = "A TCP server for playing turn based games run off a delta based system"
version = "0.1.0"
edition = "2021"
rust-version = "1.60.0"

[dependencies]
clap = { version = "3", features = ["derive"] }
futures = { version = "0.3", features = ["thread-pool"]}
log = "0.4"
serde = { version = "1", features = ["derive"]}
serde_json = "1"
simple_logger = "2"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7.0", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
